Updated Lits and added Buttons

--- a/lists/index.html
+++ b/lists/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Typography</title>
+		<title>CSS Lists</title>
 		<link rel="stylesheet" href="stylesheet.css">
 	</head>
 
@@ -46,13 +46,21 @@
 
 				<ul class="list--no-bullets">
 					<li>this is an example</li>
-					<li>of a <code>.list--no-bullets</code></li>
+					<li>of a .list--no-bullets</li>
 					<li>(unordered) list
 						<ul class="list--no-bullets">
 							<li>and a second level</li>
-							<li><code>.list--no-bullets</code> list example</li>
+							<li>.list--no-bullets list example</li>
 						</ul>
 					</li>
+				</ul>
+
+				<h2>Custom bullets list</h2>
+
+				<ul class="list--custom-bullets">
+					<li><span class="minus"></span>this is an example</li>
+					<li><span class="minus"></span>of a .list--custom-bullets</li>
+					<li><span class="minus"></span>(unordered) list</li>
 				</ul>
 
 				<h2>Definition list</h2>
