updated anchored links

--- a/anchored links/index.html
+++ b/anchored links/index.html
@@ -27,7 +27,8 @@
 				</ul>
 			</nav>
 
-		</div> <!-- header-->
+		</div>
+
 
 		<div id="wrapper">
 
@@ -101,11 +102,11 @@
 
 		</div> <!-- wrapper-->
 
-		<div id="footer">
+		<footer>
 
 			<p>Website by the author</p>
 
-		</div> <!-- footer-->
+		</footer> <!-- footer-->
 
 	</body>
 
