update anchored links no scroll class

--- a/anchored links/index.html
+++ b/anchored links/index.html
@@ -19,11 +19,11 @@
 
 			<nav>
 				<ul>
-					<li><a class="scroll" href="#top">Home</a></li>
-					<li><a class="scroll" href="#things">Things</a></li>
-					<li><a class="scroll" href="#stuff">Stuff</a></li>
-					<li><a class="scroll" href="#junk">Junk</a></li>
-					<li><a class="scroll" href="#bits">Bits</a></li>
+					<li><a href="#top">Home</a></li>
+					<li><a href="#things">Things</a></li>
+					<li><a href="#stuff">Stuff</a></li>
+					<li><a href="#junk">Junk</a></li>
+					<li><a href="#bits">Bits</a></li>
 				</ul>
 			</nav>
 
