--- a/typography/index.html
+++ b/typography/index.html
@@ -3,9 +3,12 @@
 <html>
 
 	<head>
+
 		<meta charset="utf-8">
-		<title>Typography</title>
-		<link rel="stylesheet" href="stylesheet.css">
+		<title>The Website Title</title>
+		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" media="print" href="print.css">
+
 	</head>
 
 	<body>
@@ -14,9 +17,7 @@
 
 			<div id="container">
 
-				<h1>Typography</h1>
-
-					<h1>h1 Heading 1 h1 Heading 1 h1 Heading 1</h1>
+				<h1>h1 Heading 1 h1 Heading 1 h1 Heading 1</h1>
 					<h2>h2 Heading 2 h2 Heading 2 h2 Heading 2 h2 Heading 2</h2>
 					<h3>h3 Heading 3 h3 Heading 3 h3 Heading 3 h3 Heading 3 h3 Heading 3</h3>
 					<h4>h4 Heading 4 h4 Heading 4 h4 Heading 4 h4 Heading 4 h4 Heading 4 h4 Heading 4</h4>
@@ -27,69 +28,49 @@
 
 					<p>Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>
 
-					<p>This text has a reference in the footnote<sup class="footnote" id="fnrevanchor1"><a href="#fnanchor1">1</a></sup>.</p>
-					<p class="footnote" id="fnanchor1"><sup>1</sup> Here is the footnote.</p>
 
-					<h2>Text ranged left</h2>
+					<h2>Text to left</h2>
 
-					<p style="text-align:left;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
+					<p class="text-left">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
-					<h2>Text ranged right</h2>
+					<h2>Text to right</h2>
 
-					<p style="text-align:right;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
+					<p class="text-right">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
 					<h2>Text centred</h2>
 
-					<p style="text-align:center;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
+					<p class="text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
 					<h2>Text justified</h2>
 
-					<p style="text-align:justify;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
+					<p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
-					<h2>Inline text-level semantics</h2>
+					<h2>Abbraviations</h2>
 
-					<p>
-					The <a href="http://codeispottery.com/">a element</a> example<br>
-					The <abbr>abbr element</abbr> and <abbr title="Title text">abbr element with title</abbr> examples<br>
-					The <b>b element</b> example<br>
-					The <cite>cite element</cite> example<br>
-					The <code>code element</code> example<br>
-					The <del>del element</del> example<br>
-					The <dfn>dfn element</dfn> and <dfn title="Title text">dfn element with title</dfn> examples<br>
-					The <em>em element</em> example<br>
-					The <i>i element</i> example<br>
-					The <ins>ins element</ins> example<br>
-					The <kbd>kbd element</kbd> example<br>
-					The <mark>mark element</mark> example<br>
-					The <q>q element <q>inside</q> a q element</q> example<br>
-					The <s>s element</s> example<br>
-					The <samp>samp element</samp> example<br>
-					The <small>small element</small> example<br>
-					The <span>span element</span> example<br>
-					The <strong>strong element</strong> example<br>
-					The <sub>sub element</sub> example<br>
-					The <sup>sup element</sup> example<br>
-					The <u>u element</u> example<br>
-					The <var>var element</var> example
-					</p>
+					<abbr title="HyperText Markup Language">HTML</abbr> 
 
-					<h2>Blockquotes</h2>
+					<h2>Blockquote</h2>
 
 					<blockquote cite="http://textpattern.com/">
 					<p>Here is an example of a block quote. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
 					</blockquote>
 
-					<h2>HR Tag</h2>
-
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper.</p>
+					<h2>Line Break</h2>
 
 					<hr>
 
-					<p>Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
+					<h2>Line height</h2>
 
-			</div> <!-- container-->
+					<p class="custom">Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>
 
-		</div> <!-- wrapper-->	
+					<h2>Image Replacement Technique</h2>
+
+					<div class="logo"><h1>Company Name</h1></div>
+
+
+			</div> <!-- #container-->
+
+		</div> <!-- #wrapper-->
 
 	</body>
 
