--- a/typography/index.html
+++ b/typography/index.html
@@ -45,7 +45,7 @@
 
 					<p class="text-justify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
-					<h2>Abbraviations</h2>
+					<h2>Abbreviations</h2>
 
 					<abbr title="HyperText Markup Language">HTML</abbr> 
 
