added video to embedden media

--- a/embedded-media/index.html
+++ b/embedded-media/index.html
@@ -24,9 +24,25 @@
 
 	<body>
 
+		<h2>Responsive Images</h2>
+
 		<img src="images/cat.jpg" alt="cat">
 
 		<a href="#"><img class="thumb" src="images/cat-thumb.jpg" alt="cat"></a>
+
+		<h2>Responsive Video</h2>
+
+		<h3>Youtube</h3>
+
+		<div class="video-container">
+
+			<div class="video">
+
+				<iframe src="http://www.youtube.com/embed/8uDuls5TyNE" frameborder="0" allowfullscreen=""></iframe>
+
+			</div>
+
+		</div>
 
 	</body>
 
