--- a/positioning/index.html
+++ b/positioning/index.html
@@ -12,9 +12,13 @@
 
 	<body>
 
-		<div id="wrapper">
+		<div id="wrapper" class="clearfix">
 
 			<div id="container">
+
+				<h1>Absolute Positioning</h1>
+
+				<h2>Specials</h2>
 
 				<div class="specials">
 
@@ -22,7 +26,17 @@
 
 					<p>Some placeholder text here...</p>
 
-				</div>		
+				</div>	
+
+				<h2>Image Gallery</h2>
+
+					<ul class="gallery clearfix">
+
+						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery One</span></a></div></li>
+						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery Two</span></a></div></li>
+						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery Three</span></a></div></li>
+							
+					</ul>	
 
 			</div> <!-- #container-->
 
