congruency between styling

--- a/anchored-links/index.html
+++ b/anchored-links/index.html
@@ -3,32 +3,37 @@
 <html>
 
 	<head>
-	<meta charset="utf-8">	
-	<title>The Website Title</title>
-	<meta name="robots" content="index, follow, noodp, noydir">
-	<meta name="description" content="The page description goes here." />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--[if lt IE 9]>
-    	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	<link rel="stylesheet" href="styles.css">
+
+		<meta charset="utf-8">	
+		<title>Anchored Links</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--[if lt IE 9]>
+	    	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<link rel="stylesheet" href="styles.css">
+		
 	</head>
 
 	<body>
+
 		<div id="sticky" class="clearfix">
 
-			<nav>
-				<ul>
-					<li><a href="#top">Home</a></li>
-					<li><a href="#things">Things</a></li>
-					<li><a href="#stuff">Stuff</a></li>
-					<li><a href="#junk">Junk</a></li>
-					<li><a href="#bits">Bits</a></li>
-				</ul>
-			</nav>
+			<header>
+
+				<nav>
+					<ul class="clearfix">
+						<li><a href="#">Home</a></li>
+						<li><a href="#things">Things</a></li>
+						<li><a href="#stuff">Stuff</a></li>
+						<li><a href="#junk">Junk</a></li>
+						<li><a href="#bits">Bits</a></li>
+					</ul>
+				</nav>
+
+			</header>
 
 		</div>
-
 
 		<div id="wrapper">
 
@@ -98,15 +103,15 @@
 
 				</section>
 
-			</div> <!-- container-->
+			</div> <!-- #container-->
 
-		</div> <!-- wrapper-->
+		</div> <!-- #wrapper-->
 
 		<footer>
 
-			<p>Website by the author</p>
+			<small>Powered by <a href="http://github.com">Github</a></small>
 
-		</footer> <!-- footer-->
+		</footer>
 
 	</body>
 
