--- a/positioning/index.html
+++ b/positioning/index.html
@@ -5,42 +5,46 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>The Website Title</title>
+		<title>Absolute Positioning</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--[if lt IE 9]>
+    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
 
 	</head>
 
 	<body>
 
+		<header>
+
+			<h1>Absolute Positioning</h1>
+
+		</header>
+
 		<div id="wrapper" class="clearfix">
 
 			<div id="container">
 
-				<h1>Absolute Positioning</h1>
-
-				<h2>Specials</h2>
-
 				<div class="specials">
 
-					<img src="images/special.svg" alt="">
+					<img src="images/special.png" alt="">
 
-					<p>Some placeholder text here...</p>
+					<p>Read about my special...</p>
 
 				</div>	
-
-				<h2>Image Gallery</h2>
-
-					<ul class="gallery clearfix">
-
-						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery One</span></a></div></li>
-						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery Two</span></a></div></li>
-						<li><div class="item"><a href="#"><img src="images/160x160.png"><span>Gallery Three</span></a></div></li>
-							
-					</ul>	
+	
 
 			</div> <!-- #container-->
 
 		</div> <!-- #wrapper-->
+
+		<footer>
+
+			<small>Powered by <a href="http://github.com">Github</a></small>
+
+		</footer>
 
 	</body>
 
