--- a/thumbnail-gallery/index.html
+++ b/thumbnail-gallery/index.html
@@ -5,7 +5,7 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>Buttons</title>
+		<title>Thumbnail Gallery</title>
 		<meta name="robots" content="noindex, nofollow, noodp, noydir">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--[if lt IE 9]>
@@ -19,7 +19,7 @@
 
 		<header>
 
-			<h1>Buttons</h1>
+			<h1>Thumbnail Gallery</h1>
 
 		</header>
 
@@ -27,10 +27,11 @@
 
 			<div id="container">
 
-				<input type="submit" value="Input - Submit">
-				<input type="button" value="Input - Button">
-				<input type="reset" value="Input - Reset">
-				<button>Button</button>
+						<ul class="gallery clearfix">
+							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+						</ul>
 
 			</div> <!-- #container-->
 
@@ -40,7 +41,7 @@
 
 			<small>Powered by <a href="http://github.com">Github</a></small>
 
-		</footer>	
+		</footer>
 
 	</body>
 
