--- a/typography/index.html
+++ b/typography/index.html
@@ -13,6 +13,12 @@
 
 	<body>
 
+		<header>
+
+			<h1>Typography</h1>
+
+		</header>
+
 		<div id="wrapper">
 
 			<div id="container">
@@ -71,6 +77,10 @@
 			</div> <!-- #container-->
 
 		</div> <!-- #wrapper-->
+
+		<footer>
+			<small>Powered by <a href="http://github.com">Github</a></small>
+		</footer>
 
 	</body>
 
