--- a/backgrounds/junk.html
+++ b/backgrounds/junk.html
@@ -5,9 +5,8 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>The Website Title</title>
-		<meta name="robots" content="index, follow, noodp, noydir">
-		<meta name="description" content="The page description goes here." />
+		<title>Background</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--[if lt IE 9]>
     		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -20,29 +19,29 @@
 		
 		<header>
 
-			<h1>h1 Header 1</h1>
+			<h1>Backgrounds</h1>
+
+			<nav class="clearfix">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="things.html">Things</a></li>
+					<li><a href="junk.html">Junk</a></li>
+					<li><a href="stuff.html">Stuff</a></li>
+				</ul>
+			</nav>
 
 		</header> 
-
-		<nav class="clearfix">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="things.html">Things</a></li>
-				<li><a href="junk.html">Junk</a></li>
-				<li><a href="stuff.html">Stuff</a></li>
-			</ul>
-		</nav>
 
 		<div id="wrapper">
 
 			<div id="container">
 
-				<h2>h2 Header 2</h2>
+				<h2>Heading</h2>
 
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-				<h2>h2 Header 2</h2>
+				<h2>Heading</h2>
 
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
 
@@ -54,7 +53,7 @@
 
 		<footer>
 
-			<p>Website by the author</p>
+			<small>Powered by <a href="http://github.com">Github</a></small>
 
 		</footer> 
 
