--- a/embedded-media/index.html
+++ b/embedded-media/index.html
@@ -5,44 +5,53 @@
 	<head>
 
 		<meta charset="utf-8">
-		
-		<title>The Website Title</title>
-
-		<meta name="robots" content="index, follow, noodp, noydir">
-
-		<meta name="description" content="The page description goes here." />
-
+		<title>Embedded Media</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
 		<!--[if lt IE 9]>
     	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-
 		<link rel="stylesheet" href="styles.css">
 
 	</head>
 
 	<body>
 
-		<h2>Responsive Images</h2>
+		<header>
+			
+			<h1>Embedded Media</h1>
 
-		<img src="images/cat.jpg" alt="cat">
+		</header>
 
-		<a href="#"><img class="thumb" src="images/cat-thumb.jpg" alt="cat"></a>
+		<div id="wrapper">
 
-		<h2>Responsive Video</h2>
+			<div id="container">
 
-		<h3>Youtube</h3>
+				<h2>Images</h2>
 
-		<div class="video-container">
+				<img src="images/dismemberment.jpg" alt="dismemberment sculpture">
 
-			<div class="video">
+				<h2>Embedded Youtube Video</h2>
 
-				<iframe src="http://www.youtube.com/embed/8uDuls5TyNE" frameborder="0" allowfullscreen=""></iframe>
+				<div class="video-container">
 
-			</div>
+					<div class="video">
 
-		</div>
+						<iframe src="http://www.youtube.com/embed/e7549MvSiAQ" frameborder="0" allowfullscreen=""></iframe>
+
+					</div> <!-- .video -->
+
+				</div> <!-- .video-container -->
+
+			</div> <!-- #container -->
+
+		</div> <!-- #wrapper -->
+
+		<footer>
+
+			<small>Powered by <a href="http://guthub.com">Github</a></small>
+
+		</footer>
 
 	</body>
 
