--- a/lists/index.html
+++ b/lists/index.html
@@ -3,83 +3,86 @@
 <html>
 
 	<head>
+
 		<meta charset="utf-8">
-		<title>CSS Lists</title>
-		<link rel="stylesheet" href="stylesheet.css">
+		<title>Lists</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		 <!--[if lt IE 9]>
+    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    	<![endif]-->
+		<link rel="stylesheet" href="styles.css">
+
 	</head>
 
 	<body>
+
+		<header>
+
+			<h1>Lists</h1>
+
+		</header>
 
 		<div id="wrapper">
 
 			<div id="container">
 
-				<h1>Lists</h1>
-
-				<h2>Number list</h2>
+				<h2>Ordered List</h2>
 				
 				<ol>
-					<li>this is an example</li>
-					<li>of a numbered</li>
-					<li>(ordered) list
+					<li>Item One</li>
+					<li>Item Two</li>
+					<li>Item Three
 						<ol>
-							<li>and a second level</li>
-							<li>numbered list example</li>
+							<li>Item One</li>
+							<li>Item Two</li>
 						</ol>
 					</li>
 				</ol>
 
-				<h2>Bullet list</h2>
+				<h2>Unordered List</h2>
 
 				<ul>
-					<li>this is an example</li>
-					<li>of a bulletpoint</li>
-					<li>(unordered) list
+					<li>Item One</li>
+					<li>Item Two</li>
+					<li>Item Three
 						<ul>
-							<li>and a second level</li>
-							<li>bulletpoint list example</li>
+							<li>Item One</li>
+							<li>Item Two</li>
 						</ul>
 					</li>
 				</ul>
 
-				<h2>Plain list</h2>
+				<h2>Plain List</h2>
 
 				<ul class="list--no-bullets">
-					<li>this is an example</li>
-					<li>of a .list--no-bullets</li>
-					<li>(unordered) list
+					<li>Item One</li>
+					<li>Item Two</li>
+					<li>Item Three
 						<ul class="list--no-bullets">
-							<li>and a second level</li>
-							<li>.list--no-bullets list example</li>
+							<li>Item One</li>
+							<li>Item Two</li>
 						</ul>
 					</li>
 				</ul>
 
-				<h2>Custom bullets list</h2>
+				<h2>Custom Bullets List</h2>
 
 				<ul class="list--custom-bullets">
-					<li><span class="minus"></span>this is an example</li>
-					<li><span class="minus"></span>of a .list--custom-bullets</li>
-					<li><span class="minus"></span>(unordered) list</li>
+					<li><span class="minus"></span>Item One</li>
+					<li><span class="minus"></span>Item Two</li>
+					<li><span class="minus"></span>Item Three</li>
 				</ul>
 
-				<h2>Definition list</h2>
+			</div> <!-- #container-->
 
-				<dl>
-					<dt>This is a definition list term 1</dt>
-					<dd>Definition of term 1 here</dd>
-					<dd>Another definition of term 1
-						<dl>
-							<dt>A sub term</dt>
-							<dd>With</dd>
-							<dd>Subs</dd>
-						</dl>
-					</dd>
-				</dl>
+		</div> <!-- #wrapper-->
 
-			</div> <!-- container-->
+		<footer>
 
-		</div> <!-- wrapper-->	
+			<small>Powered by <a href="http://github.com">Github</a></small>
+
+		</footer>	
 
 	</body>
 
