changed id to classes

--- a/anchored-links/index.html
+++ b/anchored-links/index.html
@@ -17,7 +17,7 @@
 
 	<body>
 
-		<div id="sticky" class="clearfix">
+		<div class="sticky clearfix">
 
 			<header>
 
@@ -35,9 +35,9 @@
 
 		</div>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<section id="things">
 
@@ -103,9 +103,9 @@
 
 				</section>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
