--- a/backgrounds/stuff.html
+++ b/backgrounds/stuff.html
@@ -13,7 +13,7 @@
 		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
 		
-</head>
+	</head>
 
 	<body id="stuff">
 		
@@ -21,8 +21,8 @@
 
 			<h1>Backgrounds</h1>
 
-			<nav class="clearfix">
-				<ul>
+			<nav>
+				<ul class="clearfix">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="things.html">Things</a></li>
@@ -33,9 +33,9 @@
 
 		</header> 
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<h2>Heading</h2>
 
@@ -47,9 +47,9 @@
 
 				<p>Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>	
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
