--- a/buttons/index.html
+++ b/buttons/index.html
@@ -23,18 +23,18 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<input type="submit" value="Input - Submit">
 				<input type="button" value="Input - Button">
 				<input type="reset" value="Input - Reset">
 				<button>Button</button>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
