--- a/lists/index.html
+++ b/lists/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<h2>Ordered List</h2>
 				
@@ -68,15 +68,15 @@
 
 				<h2>Custom Bullets List</h2>
 
-				<ul class="list--custom-bullets">
+				<ul class="list--no-bullets">
 					<li><span class="minus"></span>Item One</li>
 					<li><span class="minus"></span>Item Two</li>
 					<li><span class="minus"></span>Item Three</li>
 				</ul>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
