--- a/positioning/index.html
+++ b/positioning/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper" class="clearfix">
+		<div class="wrapper clearfix">
 
-			<div id="container">
+			<div class="container">
 
 				<div class="specials">
 
@@ -35,10 +35,9 @@
 
 				</div>	
 	
+			</div> <!-- .container-->
 
-			</div> <!-- #container-->
-
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
