--- a/responsive-navigation/index.html
+++ b/responsive-navigation/index.html
@@ -33,9 +33,9 @@
 			</ul>
 		</nav>
 
-		<div id="wrapper" class="clearfix">
+		<div class="wrapper clearfix">
 
-			<div id="container">
+			<div class="container">
 
 					<h2>Heading</h2>
 
@@ -47,9 +47,9 @@
 
 					<p>Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>		
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
