--- a/thumbnail-gallery-captions-transitions/index.html
+++ b/thumbnail-gallery-captions-transitions/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<ul class="gallery clearfix">
 					<li>
@@ -54,9 +54,9 @@
 					</li>
 				</ul>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
