--- a/thumbnail-gallery/index.html
+++ b/thumbnail-gallery/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 						<ul class="gallery clearfix">
 							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
@@ -33,9 +33,9 @@
 							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
 						</ul>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
