--- a/typography/index.html
+++ b/typography/index.html
@@ -5,7 +5,12 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>The Website Title</title>
+		<title>Typography</title>
+		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--[if lt IE 9]>
+    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" media="print" href="print.css">
 
@@ -19,9 +24,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<h1>h1 Heading 1 h1 Heading 1 h1 Heading 1</h1>
 					<h2>h2 Heading 2 h2 Heading 2 h2 Heading 2 h2 Heading 2</h2>
@@ -74,9 +79,9 @@
 					<div class="logo"><h1>Company Name</h1></div>
 
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 			<small>Powered by <a href="http://github.com">Github</a></small>
