--- a/embedded-media/index.html
+++ b/embedded-media/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<h2>Images</h2>
 
@@ -43,9 +43,9 @@
 
 				</div> <!-- .video-container -->
 
-			</div> <!-- #container -->
+			</div> <!-- .container -->
 
-		</div> <!-- #wrapper -->
+		</div> <!-- .wrapper -->
 
 		<footer>
 
