--- a/social-media-buttons/index.html
+++ b/social-media-buttons/index.html
@@ -23,9 +23,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 					<ul class="social-channels">
 						<li>
@@ -55,9 +55,9 @@
 						
 					</ul>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->	
+		</div> <!-- .wrapper-->	
 
 		<footer>
 
