--- a/thumbnail-gallery-captions/index.html
+++ b/thumbnail-gallery-captions/index.html
@@ -21,9 +21,9 @@
 
 		</header>
 
-		<div id="wrapper">
+		<div class="wrapper">
 
-			<div id="container">
+			<div class="container">
 
 				<ul class="gallery clearfix">
 					<li>
@@ -52,9 +52,9 @@
 					</li>
 				</ul>
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
