updated flexbox alignments

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -28,11 +28,47 @@
 
 			<div class="container">
 
-						<ul class="gallery">
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-						</ul>
+				<h2>Flex Alignment</h2>
+
+				<h3>Flex End</h3>
+
+				<ul class="gallery">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
+
+				<h3>Flex Center</h3>
+
+				<ul class="gallery-2">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
+
+				<h3>Flex Space Between</h3>
+
+				<ul class="gallery-3">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
+
+				<h3>Flex Space Around</h3>
+
+				<ul class="gallery-4">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
+
+				<h3>Flex Space Around &amp; Center</h3>
+
+				<ul class="gallery-5">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
 
 			</div> <!-- .container-->
 
