updated to flexbox

--- a/anchored-links/index.html
+++ b/anchored-links/index.html
@@ -3,43 +3,42 @@
 <html>
 
 	<head>
-
 		<meta charset="utf-8">	
 		<title>Anchored Links</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-	    	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<link rel="stylesheet" href="styles.css">
-		
+		<link rel="stylesheet" href="styles.css">	
 	</head>
 
 	<body>
 
-		<div class="sticky clearfix">
+		<div class="sticky">
 
 			<header>
 
 				<nav>
-					<ul class="clearfix">
-						<li><a href="#">Home</a></li>
+
+					<ul>
+						<li><a href="#things">Home</a></li>
 						<li><a href="#things">Things</a></li>
 						<li><a href="#stuff">Stuff</a></li>
 						<li><a href="#junk">Junk</a></li>
 						<li><a href="#bits">Bits</a></li>
 					</ul>
+
 				</nav>
 
 			</header>
 
-		</div> <!-- #sticky -->
+		</div> <!-- .sticky -->
 
 		<div class="wrapper">
 
 			<div class="container">
 
 				<section id="things">
+
+					<h1>Show on Scroll</h1>
 
 					<h2>Things</h2>
 
