updated with better image

--- a/pattern-overlay/index.html
+++ b/pattern-overlay/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
+
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Image Oberlay</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
 
-<div class="overlay">
-    <span></span>
-</div>
+	<head>
 
-</body>
+		<meta charset="utf-8">	
+		<title>Pattern Overlay</title>
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
+		
+	</head>
+
+	<body>
+
+		<header>
+
+			<h1>Pattern Overlay</h1>
+
+		</header> 
+
+		<div class="wrapper">
+
+			<div class="container">
+
+				<div class="overlay">
+
+    			<span></span>
+				</div>
+
+			</div> <!-- .container-->
+
+		</div> <!-- .wrapper-->
+
+		<footer>
+
+			<small>Powered by <a href="http://github.com">Github</small>
+
+		</footer> 
+
+	</body>
+
 </html>
