--- a/transforms/index.html
+++ b/transforms/index.html
@@ -3,16 +3,11 @@
 <html>
 
 	<head>
-	
 		<meta charset="utf-8">
 		<title>Transforms</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
 
 	<body>
@@ -29,15 +24,15 @@
 
 				<h2>Rotate</h2>
 
-				<a class="rotate" href="#"><img src="images/160x160.png"></a>
+				<a class="rotate" href="#"><img src="images/cat.jpg"></a>
 
 				<h2>Scale</h2>
 
-				<a class="scale" href="#"><img src="images/160x160.png"></a>
+				<a class="scale" href="#"><img src="images/cat.jpg"></a>
 
 				<h2>Skew</h2>
 
-				<a class="skew" href="#"><img src="images/160x160.png"></a>
+				<a class="skew" href="#"><img src="images/cat.jpg"></a>
 
 			</div> <!-- .container-->
 
