--- a/filters/index.html
+++ b/filters/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
+
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
 
-<img class="grayscale" src="images/sunflower.jpg" alt=""/>
+	<head>
 
-<img class="blur" src="images/sunflower.jpg" alt=""/>
+		<meta charset="utf-8">	
+		<title>Filters</title>
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
+		
+	</head>
 
-<img class="sepia" src="images/sunflower.jpg" alt=""/>
+	<body>
 
-<img src="images/sunflower.jpg" alt=""/>
+		<header>
 
-</body>
+			<h1>Filters</h1>
+
+		</header> 
+
+		<div class="wrapper">
+
+			<div class="container">
+				
+				<img class="grayscale" src="images/who-shot-the-painter.jpg" alt="who shot the painter"/>
+
+				<img class="blur" src="images/who-shot-the-painter.jpg" alt="who shot the painter"/>
+
+				<img class="sepia" src="images/who-shot-the-painter.jpg" alt="who shot the painter"/>
+
+			</div> <!-- .container-->
+
+		</div> <!-- .wrapper-->
+
+		<footer>
+
+			<small>Powered by <a href="http://github.com">Github</small>
+
+		</footer> 
+
+	</body>
+
 </html>
