updated to flexbox

--- a/thumbnail-gallery-captions/index.html
+++ b/thumbnail-gallery-captions/index.html
@@ -5,11 +5,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Thumbnail Gallery with Captions</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
 	</head>
 
@@ -25,7 +22,7 @@
 
 			<div class="container">
 
-				<ul class="gallery clearfix">
+				<ul class="gallery">
 					<li>
 						<div class="item">
 							<a href="#">
