--- a/thumbnail-gallery/index.html
+++ b/thumbnail-gallery/index.html
@@ -3,16 +3,11 @@
 <html>
 
 	<head>
-
 		<meta charset="utf-8">
 		<title>Thumbnail Gallery</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
 
 	<body>
@@ -27,11 +22,11 @@
 
 			<div class="container">
 
-						<ul class="gallery clearfix">
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-							<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-						</ul>
+				<ul class="gallery">
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
+				</ul>
 
 			</div> <!-- .container-->
 
