--- a/border-radius/index.html
+++ b/border-radius/index.html
@@ -6,13 +6,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Border Radius</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
 
 	<body>
@@ -25,12 +21,12 @@
 
 		<div class="wrapper">
 
-			<div class="container clearfix">
+			<div class="container">
 
 				<ul class="grid">
 					<li><div class="box-1"></div><p>border-radius: 0;</p></li>
 					<li><div class="box-2"></div><p>border-radius: 35px;</p></li>
-					<li><div class="box-3"></div><p>border-radius: 95px;</p></li>
+					<li><div class="box-3"></div><p>border-radius: 50%;</p></li>
 					<li><div class="box-4"></div><p>border-radius: 60px;</p></li>
 					<li><div class="box-5"></div><p>border-radius: 0 60px;</p></li>
 					<li><div class="box-6"></div><p>border-radius: 60px 0;</p></li>
