--- a/social-media-icons-sprite/index.html
+++ b/social-media-icons-sprite/index.html
@@ -3,16 +3,11 @@
 <html>
 
 	<head>
-
 		<meta charset="utf-8">
 		<title>Social Media Buttons with Image Sprite</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-		
 	</head>
 
 	<body>
